--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "disqus-react": "^1.0.10",
     "gatsby": "^2.26.1",
     "gatsby-awesome-pagination": "^0.3.6",
     "gatsby-image": "^2.5.0",
