--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,22 +2,22 @@ backend:
   name: git-gateway
   branch: master
 
-media_folder: static/img
-public_folder: /img
+media_folder: static/images
+public_folder: /images
 
 collections:
   - name: 'blog'
     label: 'Blog'
     folder: 'src/pages/posts'
+    media_folder: 'static/images'
+    public_folder: '/images'
     create: true
-    slug: 'index'
-    media_folder: ''
-    public_folder: ''
-    path: '{{title}}/index'
+    slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
     editor:
-      preview: false
+      preview: true
     fields:
       - { label: 'Title', name: 'title', widget: 'string' }
       - { label: 'Publish Date', name: 'date', widget: 'datetime' }
-      - { label: 'Description', name: 'description', widget: 'string' }
+      - { label: 'Author', name: 'author', widget: 'string' }
+      - { label: 'Tag', name: 'tag', widget: 'string' }
       - { label: 'Body', name: 'body', widget: 'markdown' }
