--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "disqus-react": "^1.0.10",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.26.1",
     "gatsby-awesome-pagination": "^0.3.6",
     "gatsby-image": "^2.5.0",
+    "gatsby-plugin-google-analytics": "^2.9.0",
     "gatsby-plugin-manifest": "^2.6.1",
     "gatsby-plugin-netlify-cms": "^4.7.0",
     "gatsby-plugin-offline": "^3.4.0",
