--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-sharp": "^2.8.0",
     "gatsby-remark-prismjs": "^3.10.0",
     "gatsby-source-filesystem": "^2.5.0",
+    "gatsby-transformer-json": "^2.11.0",
     "gatsby-transformer-remark": "^2.13.1",
     "gatsby-transformer-sharp": "^2.6.0",
     "netlify-cms-app": "^2.14.8",
