--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -15,6 +15,7 @@ collections:
     public_folder: '/images'
     create: true
     slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
+    identifier_field: slug
     extension: 'en.md'
     format: frontmatter
     editor:
@@ -22,6 +23,7 @@ collections:
     fields:
       - { label: 'Language', name: 'language', widget: hidden, default: en }
       - { label: 'Title', name: 'title', widget: 'string' }
+      - { label: 'Slug', name: 'slug', widget: 'string', pattern: [ '^[a-z0-9]+(?:-[a-z0-9]+)*$','A slug can have no spaces or special characters' ] }
       - { label: 'Publish Date', name: 'date', widget: 'datetime' }
       - { label: 'Author', name: 'author', widget: 'string', default: 'Burhan Savcı' }
       - { label: 'Tag',
@@ -46,6 +48,7 @@ collections:
     public_folder: '/images'
     create: true
     slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
+    identifier_field: slug
     extension: 'tr.md'
     format: frontmatter
     editor:
@@ -53,6 +56,7 @@ collections:
     fields:
       - { label: 'Language', name: 'language', widget: hidden, default: tr }
       - { label: 'Title', name: 'title', widget: 'string' }
+      - { label: 'Slug', name: 'slug', widget: 'string', pattern: [ '^[a-z0-9]+(?:-[a-z0-9]+)*$','A slug can have no spaces or special characters' ] }
       - { label: 'Publish Date', name: 'date', widget: 'datetime' }
       - { label: 'Author', name: 'author', widget: 'string', default: 'Burhan Savcı' }
       - { label: 'Tag',
