--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "gatsby-plugin-offline": "^3.4.0",
     "gatsby-plugin-react-helmet": "^3.4.0",
     "gatsby-plugin-sharp": "^2.8.0",
+    "gatsby-remark-images": "^3.11.0",
     "gatsby-remark-prismjs": "^3.10.0",
+    "gatsby-remark-relative-images": "^2.0.2",
     "gatsby-source-filesystem": "^2.5.0",
     "gatsby-transformer-json": "^2.11.0",
     "gatsby-transformer-remark": "^2.13.1",
