--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "burhan-savci-blog",
   "private": true,
   "description": "My Blog Site",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "author": "Burhan Savci <burhansavci@gmail.com>",
   "dependencies": {
     "disqus-react": "^1.0.10",
     "dotenv": "^8.2.0",
     "gatsby": "^2.26.1",
     "gatsby-awesome-pagination": "^0.3.6",
+    "gatsby-background-image": "^1.4.1",
     "gatsby-image": "^2.5.0",
     "gatsby-plugin-google-gtag": "^2.6.0",
     "gatsby-plugin-manifest": "^2.6.1",
